--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -27,7 +27,7 @@ html(lang='en')
         // Navigation
         nav#sideNav.navbar.navbar-expand-lg.navbar-dark.bg-primary.fixed-top
             a.navbar-brand.js-scroll-trigger(href='#page-top')
-                span.d-block.d-lg-none Clarence Taylor
+                span.d-block.d-lg-none Hiroyuki Yagihashi
                 span.d-none.d-lg-block
                     img.img-fluid.img-profile.rounded-circle.mx-auto.mb-2(src='assets/img/profile.jpg', alt='')
             button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
@@ -54,21 +54,21 @@ html(lang='en')
             section#about.resume-section
                 .resume-section-content
                     h1.mb-0
-                        | Clarence 
-                        span.text-primary Taylor
+                        | Hiroyuki
+                        span.text-primary Yagihashi
                     .subheading.mb-5
-                        | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
-                        a(href='mailto:name@email.com') name@email.com
+                        | 1998-10-19 · (+81)70-2024-1019 ·
+                        a(href='mailto:hey@hiroy.uk') hey@hiroy.uk
                     p.lead.mb-5
-                        | I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+                        | ReactでのWebクライアント開発とパブリッククラウドを用いたインフラ/DevOps構築を得意とするソフトウェアエンジニア。Railsを用いたAPIサーバー開発、Androidアプリ開発も対応可。主にシステム全体の設計やパフォーマンスチューニングを行っています。
                     .social-icons
-                        a.social-icon(href='#')
-                            i.fab.fa-linkedin-in
-                        a.social-icon(href='#')
+                        //a.social-icon(href='#')
+                        //    i.fab.fa-linkedin-in
+                        a.social-icon(href='https://github.com/HiroyukiYagihashi')
                             i.fab.fa-github
-                        a.social-icon(href='#')
+                        a.social-icon(href='https://twitter.com/hryk_yg')
                             i.fab.fa-twitter
-                        a.social-icon(href='#')
+                        a.social-icon(href='https://www.facebook.com/yagihashihiroyuki')
                             i.fab.fa-facebook-f
 
             hr.m-0
@@ -219,31 +219,31 @@ html(lang='en')
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
                             | 1
-                            sup st 
+                            sup st
                             | Place - University of Colorado Boulder - Emerging Tech Competition 2009
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
                             | 1
-                            sup st 
+                            sup st
                             | Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
                             | 2
-                            sup nd 
+                            sup nd
                             | Place - University of Colorado Boulder - Emerging Tech Competition 2008
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
                             | 1
-                            sup st 
+                            sup st
                             | Place - James Buchanan High School - Hackathon 2006
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
                             | 3
-                            sup rd 
+                            sup rd
                             | Place - James Buchanan High School - Hackathon 2005
 
         // Bootstrap core JS
