Add social icons and Modify site title

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,9 +8,9 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Resume - Start Bootstrap Theme
+        title Hiroyuki Yagihashi
 
-        link(rel='icon', type='image/x-icon', href='assets/img/favicon.ico')
+        link(rel='icon', type='image/x-icon', href='assets/img/profile.jpg')
 
         // Font Awesome icons (free version)
         script(src='https://use.fontawesome.com/releases/v5.13.0/js/all.js', crossorigin='anonymous')
@@ -62,14 +62,18 @@ html(lang='en')
                     p.lead.mb-5
                         | ReactでのWebクライアント開発とパブリッククラウドを用いたインフラ/DevOps構築を得意とするソフトウェアエンジニア。Railsを用いたAPIサーバー開発、Androidアプリ開発も対応可。主にシステム全体の設計やパフォーマンスチューニングを行っています。
                     .social-icons
-                        //a.social-icon(href='#')
-                        //    i.fab.fa-linkedin-in
+                        a.social-icon(href='https://www.linkedin.com/in/hiroyuki-yagihashi-6b8388186')
+                            i.fab.fa-linkedin-in
                         a.social-icon(href='https://github.com/HiroyukiYagihashi')
                             i.fab.fa-github
                         a.social-icon(href='https://twitter.com/hryk_yg')
                             i.fab.fa-twitter
                         a.social-icon(href='https://www.facebook.com/yagihashihiroyuki')
                             i.fab.fa-facebook-f
+                        a.social-icon(href='https://blog.hiroy.uk')
+                            i.fas.fa-blog
+                        a.social-icon(href='https://speakerdeck.com/hiroyukiyagihashi')
+                            i.fab.fa-speaker-deck
 
             hr.m-0
 
