--- a/src/scss/sections/_resume-section.scss
+++ b/src/scss/sections/_resume-section.scss
@@ -10,6 +10,9 @@ section.resume-section {
         width: 100%;
     }
 }
+section.skills-space {
+    margin: 3rem;
+}
 @include media-breakpoint-up(md) {
     section.resume-section {
         min-height: 100vh;
